style.css
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
}

.logo {
    width: 9rem;
    height: auto;
}

header {
    display: flex;
    align-items: center;
    position: sticky;
    top: 0;
    z-index: 100;
    padding: 1rem;
    gap: 2rem;
    background-color: rgba(255, 255, 255, 0.7);
    backdrop-filter: blur(10px);
}

.nav-darkmode-toggle {
    display: flex;
    gap: 1rem;
}

nav {
    gap: 3rem;
    display: flex;
    align-items: center;
    font-size: 1rem;
}

.search-group {
    display: flex;
    border: 2px solid lightgrey;
    border-radius: 10px;
    padding: 0.2rem 0.5rem;

}

.search-group input {
    border: none;
    font-size: 1rem;
    height: 2rem;
    width: 160px;
    color: black;
    outline: none;
    color: lightgrey;
}

.search-group input:focus {
    border-color: lightgrey;
}

.search-group button {
    height: 2rem;
    border: none;
    color: lightgrey;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.3rem;
}

.get-started-btn {
    margin-right: 0.5rem;
    padding: 0.5rem 1rem;
    background-color: blue;
    color: white;
    border-radius: 12px;
    border: 2px solid blue;
    outline: none;
    font-size: 1rem;
    cursor: pointer;
}

.day-night-mode {
    color: #64748B;
    border: 2px solid #64748B;
    border-radius: 50%;
    padding: 0.7rem;
    font-size: 1rem;
    height: 0.5rem;
    width: 0.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

nav button:active {
    opacity: 0.7;
}

nav a {
    cursor: pointer;
    color: inherit;
    text-decoration: none;
}

nav a:hover {
    opacity: 1;
    text-decoration: underline;
}

.hero-section {
    width: 100%;
    background-color: white;
    min-height: 70vh;
    width: 100%;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 12rem;
    margin-bottom: 3rem;
}

.hero-section h1 {
    position: static;
    font-size: 4rem;
    color: #0F172A;
    line-height: 1.3;
    margin-bottom: 1rem;
    width: 80%;
}

.hero-section p {
    position: static;
    font-size: 1.2rem;
    color: #64748B;
    margin-bottom: 1.5rem;
    max-width: 500px;
}

.hero-section #btn-1 {
    position: static;
    font-size: 1.1rem;
    padding: 0.7rem 1.5rem;
    background-color: blue;
    color: white;
    border-radius: 12px;
    border: 2px solid blue;
    outline: none;
    cursor: pointer;
    margin-right: 1rem;
}

.hero-section #btn-2 {
    position: static;
    font-size: 1.1rem;
    padding: 0.7rem 1.5rem;
    background-color: white;
    color: black;
    border-radius: 12px;
    border: 2px solid black;
    outline: none;
    cursor: pointer;
}

.hero-section #btn-1:active {
    opacity: 0.7;
}

.hero-section #btn-2:active {
    opacity: 0.6;
}

.feat-heading-1 {
    text-align: center;
    font-size: 1rem;
    color: blue;
}

.feature-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
}

.feat-heading-2 {
    text-align: center;
    font-size: 1.5rem;
}

.feature-para {
    text-align: center;
    font-size: 1rem;
    color: #64748B;
}

.card img {
    width: 15vh;
    height: auto;
    padding-bottom: 2rem;
}

.feature-cards {
    display: flex;
    justify-content: space-around;
    gap: 8rem;
    margin-top: 4rem;
    margin-bottom: 10rem;
}

.card {
    border-radius: 12px;
    text-align: center;
    display: flex;
    gap: 1rem;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    border: 1px solid skyblue;
    padding: 3.5rem;
    background-color: #EEF2FF;
}

.card h2 {
    font-size: 1rem;
    color: #0F172A;
}

.card p {
    width: 10rem;
    font-size: 0.9rem;
    color: #64748B;
}

.card i {
    color: blue;
    font-size: 2rem;
}

.burger {
    display: none;
}

.logo-in-footer {
    width: 10rem;
    height: auto;
}

.footer {
    border-top: 1px solid lightgray;
    display: flex;
    padding: 7rem 1rem;
    justify-content: center;
    gap: 8rem;
}


.logo-description-socials {
    width: 20%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 1rem;
    color: #64748B;
}

.logo-description-socials p {
    font-size: 0.7rem;
}

.socials-in-footer {
    display: flex;
    gap: 1rem;
    padding-top: 0.5rem;

}

.socials-in-footer i:hover {
    background-color: #64748B;
    color: white;
    border-color: white;
}

.socials-in-footer i {
    font-size: 0.8rem;
    border: 1px solid #64748B;
    border-radius: 10px;
    padding: 0.4rem;
}

.quick-links h2 {
    color: #64748B;
    font-size: 1rem;
}

.quick-links a {
    color: #64748B;
    font-size: 0.7rem;
    text-decoration: none;
}

.quick-links ul {
    color: #64748B;
    padding-left: 1rem;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.quick-links a:hover {
    text-decoration: underline;
}

.quick-links {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.contact-info-in-footer {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    color: #64748B;
    font-size: 0.7rem;
}


.contact-info-in-footer i {
    padding-right: 1rem;
}

.newsletter-in-footer {
    width: 20%;
    display: flex;
    flex-direction: column;
    color: #64748B;
    gap: 1rem;
    font-size: 0.7rem;
}

.newsletter-in-footer input {
    height: 2rem;
    width: 12rem;
    padding: 0.3rem;
    background-color: white;
    border-radius: 8px;
    border: 1px solid lightgrey;
    outline: none;
    margin-bottom: 1rem;
    font-size: 0.7rem;
    color: #64748B;
}

.newsletter-in-footer button {
    background-color: blue;
    color: white;
    font-size: 0.7rem;
    border-radius: 12px;
    border: 2px solid blue;
    margin-bottom: 1rem;
    height: 2rem;
    width: 12rem;
}
/* ... */

